fixed bug #20029: Toolbar Layout broken

--- a/templates/default/less/Services/UIComponent/Toolbar/delos.less
+++ b/templates/default/less/Services/UIComponent/Toolbar/delos.less
@@ -73,7 +73,7 @@
   }
 }
 
-@media only screen and (max-width: @grid-float-breakpoint-max) {
+@media (min-width: 768px) {
 	.ilToolbar {
       .container-fluid {
         padding-left: 0;
